*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -1,12 +1,13 @@
 
 ##### Messages d'erreur #################################
-errors.global=Une erreur interne non identifiée s'est produite. Essayez de relancer le serveur d'application
+errors.global							= Une erreur interne non identifiée s'est produite. Essayez de relancer le serveur d'application
 
 errors.persistance.global				= Erreur d'accés à la base de données
 errors.persistance.select				= Erreur au moment de la récupération des données dans la base de données
 errors.persistance.doublon				= L'objet "{0}" existe déjà
 errors.persistance.activity.foreignKey	= Impossible de supprimer cette activité :  il s'agit d'une dépendance pour une autre activité (clé étrangère).
-errors.login.invalide					=Votre identification est incorrecte, veuillez réessayer.
+errors.login.invalide					= Votre identification est incorrecte, veuillez réessayer.
+errors.session.invalid					= Vous n'êtes pas encore connecté, veuillez saisir votre login et votre mot de passe 
 
 ##### Controles génériques ###############################
 errors.champ.obligatoire		=Le champ {0} est obligatoire.
@@ -38,7 +39,6 @@ form.field.activity.state		= Etat
 form.field.activity.startDate	= Date de lancement
 form.field.activity.endDate		= Date de cloture	
 
-
 	## Login
 button.title.login		= Connexion
 form.title.login		= Login
@@ -46,22 +46,27 @@ form.field.login		= Login
 form.field.password 	= Mot de passe
 	
 	## Activities list
-table.title.listActivities 						= Liste des activités
-table.title.listChangeStateActivities 			= Liste des activités pouvant changer d'état
-table.field.listActivities.name 				= Nom
-table.field.listActivities.details 				= Description
-table.field.listActivities.state 				= Etat
-table.field.listActivities.edit 				= Editer
-table.field.listActivities.delete 				= Supprimer
-table.field.listActivities.action				= Action
-table.field.listActivities.deleteConfirmation 	= Effacer cette activité ?
+table.title.listActivities 			= Liste des activités
+table.title.listChangeStateActivities = Liste des activités pouvant changer d'état
+table.field.listActivities.name 	= Nom
+table.field.listActivities.details 	= Description
+table.field.listActivities.state 	= Etat
+table.field.listActivities.edit 	= Editer
+table.field.listActivities.delete 	= Supprimer ?
+table.field.listActivities.action	= Action
+table.field.listActivities.startDate= Date de début
+table.field.listActivities.endDate	= Date de fin
+table.field.listActivities.deleteConfirmation = Effacer cette activité ?
+
+
 
 
 	## manageActivityCreation
 	
-form.title.manageActivityCreation.insert	= Ajouter une activité
-form.title.manageActivityCreation.update	= Modifier une activité
-
+form.title.manageActivityCreation.insert			= Ajouter une activité
+form.title.manageActivityCreation.update			= Modifier une activité
+form.field.manageActivityCreation.name				= Nom
+form.field.manageActivityCreation.details			= Descritpion	
 
 
 	## manageActivityDependances
@@ -85,7 +90,6 @@ list.button.manageDependancesTypes.submit		= Valider les types
 	## showActivitySummary
 	
 form.title.showActivitySummary	= Fiche de détail d'une activité
-
 
 	## messages
 msg.error 	= Erreur
@@ -122,20 +126,23 @@ finished	= Finie
 start	= Commencer
 finish	= Terminer
 
+##### Rôles d'un utilisateur #################################
+userrole.invalid.user = Role inconnu
 
 ##### Menu #################################
 menu.listActivities 			= Lister les activités
 menu.manageActivityCreation		= Créer une nouvelle activité
 menu.deconnection 				= Se déconnecter
-menu.listChangeStateActivities  = Dernières validations
+menu.listChangeStateActivities  = Activités pouvant changer d'état
+menu.historizedActivities		= Historique des activités
 
-##### Admin #################################
+##### Administration #################################
 admin.addUser.title				= Ajout d'un nouvel utilisateur
 admin.addUser.firstName			= Nom
 admin.addUser.lastName			= Prénom
 admin.button.validate			= Valider
 admin.error.password			= Veuillez vérifier votre mot de passe
-admin.field.checkPassword		= Vérification du mot de passe
+admin.field.checkPassword		= Vérification du mot de passeadmin.field.checkPassword		= Vérification du mot de passe
 
 admin.field.checkPassword		= Vérification du mot de passe
 admin.msg.info.user.validate	= L'utilisateur a bien été enregistré
