*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -19,9 +19,9 @@ errors.champ.numerique			=Le champ {0} doit être numérique.
 ##### Titres des pages #################################
 page.title.login 						= Identification
 page.title.listActivities 				= Liste des activités
-page.title.manageActivityCreation		= Ajouter ou Modifier une activité
-page.title.manageActivityDependances 	= Gérer les dépendances
-page.title.manageDependancesTypes 		= Gérer les types des dépendances
+page.title.manageActivityCreation		= Gérer une activité
+page.title.manageActivityDependances 	= Gérer une activité
+page.title.manageDependancesTypes 		= Gérer une activité
 page.title.showActivitySummary 			= Voir la fiche de détail d'une activité
 page.title.listChangeStateActivities	= Liste des activités pouvant changer d'état
 
@@ -52,7 +52,7 @@ table.field.listActivities.name 	= Nom
 table.field.listActivities.details 	= Description
 table.field.listActivities.state 	= Etat
 table.field.listActivities.edit 	= Editer
-table.field.listActivities.delete 	= Supprimer ?
+table.field.listActivities.delete 	= Supprimer
 table.field.listActivities.action	= Action
 table.field.listActivities.startDate= Date de début
 table.field.listActivities.endDate	= Date de fin
@@ -63,10 +63,8 @@ table.field.listActivities.deleteConfirmation = Effacer cette activité ?
 
 	## manageActivityCreation
 	
-form.title.manageActivityCreation.insert			= Ajouter une activité
-form.title.manageActivityCreation.update			= Modifier une activité
-form.field.manageActivityCreation.name				= Nom
-form.field.manageActivityCreation.details			= Descritpion	
+form.title.manageActivityCreation.insert	= Ajouter une activité
+form.title.manageActivityCreation.update	= Modifier une activité
 
 
 	## manageActivityDependances
