*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -148,4 +148,15 @@ admin.msg.info.user.validate	= L'utilisateur a bien été enregistré
 admin.msg.error.user.insert		= L'insertion a échoué
 
 admin.menu.createUser			= Création utilisateur
+admin.menu.listUsers			= Lister les utilisateurs
+admin.listUsers.title			= Administration des utilisateurs
+
+admin.listUsers.title			= Liste des utilisateurs
+table.title.listUsers			= Liste des utilisateurs
+table.field.listUsers.firstName = Nom
+table.field.listUsers.lastName  = Prénom
+table.field.listUsers.login		= Login
+table.field.listUsers.role		= Rôle
+table.field.listUsers.edit		= Editer
+table.field.listUsers.delete	= Supprimer
 
