modifications du terme "activité" en "tâche"

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -5,7 +5,7 @@ errors.global							= Une erreur interne non identifiée s'est produite. Essayez 
 errors.persistance.global				= Erreur d'accés à la base de données
 errors.persistance.select				= Erreur au moment de la récupération des données dans la base de données
 errors.persistance.doublon				= L'objet "{0}" existe déjà
-errors.persistance.activity.foreignKey	= Impossible de supprimer cette activité :  il s'agit d'une dépendance pour une autre activité (clé étrangère).
+errors.persistance.activity.foreignKey	= Problème de clé étrangère.
 errors.login.invalide					= Votre identification est incorrecte, veuillez réessayer.
 errors.session.invalid					= Vous n'êtes pas encore connecté, veuillez saisir votre login et votre mot de passe 
 
@@ -18,12 +18,12 @@ errors.champ.numerique			=Le champ {0} doit être numérique.
 
 ##### Titres des pages #################################
 page.title.login 						= Identification
-page.title.listActivities 				= Liste des activités
-page.title.manageActivityCreation		= Gérer une activité
-page.title.manageActivityDependances 	= Gérer une activité
-page.title.manageDependancesTypes 		= Gérer une activité
-page.title.showActivitySummary 			= Voir la fiche de détail d'une activité
-page.title.listChangeStateActivities	= Liste des activités pouvant changer d'état
+page.title.listActivities 				= Liste des tâches
+page.title.manageActivityCreation		= Gérer une tâche
+page.title.manageActivityDependances 	= Gérer une tâche
+page.title.manageDependancesTypes 		= Gérer une tâche
+page.title.showActivitySummary 			= Voir la fiche de détail d'une tâche
+page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
 
 ##### Formulaires  et tables #################################
 
@@ -46,31 +46,31 @@ form.field.login		= Login
 form.field.password 	= Mot de passe
 	
 	## Activities list
-table.title.listActivities 			= Liste des activités
-table.title.listChangeStateActivities = Liste des activités pouvant changer d'état
-table.field.listActivities.name 	= Nom
-table.field.listActivities.details 	= Description
-table.field.listActivities.state 	= Etat
-table.field.listActivities.edit 	= Editer
-table.field.listActivities.delete 	= Supprimer
-table.field.listActivities.action	= Action
-table.field.listActivities.startDate= Date de début
-table.field.listActivities.endDate	= Date de fin
-table.field.listActivities.deleteConfirmation = Effacer cette activité ?
+table.title.listActivities 						= Liste des tâches
+table.title.listChangeStateActivities 			= Liste des tâches pouvant changer d'état
+table.field.listActivities.name 				= Nom
+table.field.listActivities.details 				= Description
+table.field.listActivities.state 				= Etat
+table.field.listActivities.edit 				= Editer
+table.field.listActivities.delete 				= Supprimer
+table.field.listActivities.action				= Action
+table.field.listActivities.startDate			= Date de début
+table.field.listActivities.endDate				= Date de fin
+table.field.listActivities.deleteConfirmation 	= Effacer cette tâche ?
 
 
 
 
 	## manageActivityCreation
 	
-form.title.manageActivityCreation.insert	= Ajouter une activité
-form.title.manageActivityCreation.update	= Modifier une activité
+form.title.manageActivityCreation.insert	= Ajouter une tâche
+form.title.manageActivityCreation.update	= Modifier une tâche
 
 
 	## manageActivityDependances
 	
-form.title.manageActivityDependances			= Gérer les dépedances d'une activité
-form.field.manageActivityDependances			= Liste des activités
+form.title.manageActivityDependances			= Gérer les dépedances d'une tâche
+form.field.manageActivityDependances			= Liste des tâches
 form.field.manageActivityDependances.toAdd 		= Possibles
 form.field.manageActivityDependances.added		= Effectifs
 form.button.manageActivityDependances.submit	= Valider les dépendances
@@ -79,7 +79,7 @@ form.button.manageActivityDependances.submit	= Valider les dépendances
 	## manageDependancesTypes
 	
 list.title.manageDependancesTypes				= Liste des dépendances et leur type associé
-list.manageDependancesTypes.predecessor 		= Predecesseur
+list.manageDependancesTypes.predecessor 		= Prédecesseur
 list.manageDependancesTypes.successor			= Successeur
 list.manageDependancesTypes.columngroup.title	= Type
 list.button.manageDependancesTypes.submit		= Valider les types
@@ -87,26 +87,26 @@ list.button.manageDependancesTypes.submit		= Valider les types
 
 	## showActivitySummary
 	
-form.title.showActivitySummary	= Fiche de détail d'une activité
+form.title.showActivitySummary	= Fiche de détail d'une tâche
 
 	## messages
 msg.error 	= Erreur
 msg.info 	= Information
 msg.warning = Attention
 
-msg.error.activity.change.state.created		= Il n'est pas possible actuellement de commencer l'activité {0}
-msg.error.activity.change.state.inprogress	= Il n'est pas possible actuellement de terminer l'activité {0}
-msg.info.activity.change.state.inprogress 	= L'activité "{0}" est à présent en cours de réalisation
-msg.info.activity.change.state.finished 	= L'activité "{0}" a été complètement réalisée
+msg.error.activity.change.state.created		= Il n'est pas possible actuellement de commencer la tâche {0}
+msg.error.activity.change.state.inprogress	= Il n'est pas possible actuellement de terminer la tâche {0}
+msg.info.activity.change.state.inprogress 	= La tâche "{0}" est à présent en cours de réalisation
+msg.info.activity.change.state.finished 	= La tâche "{0}" a été complètement réalisée
 
-msg.info.activity.inserted 	= L'activité "{0}" a bien été ajoutée
-msg.info.activity.updated 	= L'activité "{0}" a bien été modifiée
+msg.info.activity.inserted 	= La tâche "{0}" a bien été ajoutée
+msg.info.activity.updated 	= La tâche "{0}" a bien été modifiée
 
-msg.info.activity.dependances.saved = Les dépendances de l'activité "{0}" ont bien été sauvegardées
-msg.info.activity.dependancesTypes.saved = Les types des dépendances de l'activité "{0}" ont bien été sauvegardées
+msg.info.activity.dependances.saved 		= Les dépendances de la tâche "{0}" ont bien été sauvegardées
+msg.info.activity.dependancesTypes.saved 	= Les types des dépendances de la tâche "{0}" ont bien été sauvegardées
 
 
-msg.info.activity.manageActivityDependances	=Vous ne pouvez plus changer les dépendances de l'activité "{0}" car elle a déjà été démarrée
+msg.info.activity.manageActivityDependances	= Vous ne pouvez plus changer les dépendances de la tâche "{0}" car elle a déjà été démarrée
 
 
 ##### Types de dépendnaces #################################
@@ -125,14 +125,14 @@ start	= Commencer
 finish	= Terminer
 
 ##### Rôles d'un utilisateur #################################
-userrole.invalid.user = Role inconnu
+userrole.invalid.user 			= Role inconnu
 
 ##### Menu #################################
-menu.listActivities 			= Lister les activités
-menu.manageActivityCreation		= Créer une nouvelle activité
+menu.listActivities 			= Lister les tâches
+menu.manageActivityCreation		= Créer une nouvelle tâche
 menu.deconnection 				= Se déconnecter
-menu.listChangeStateActivities  = Activités pouvant changer d'état
-menu.historizedActivities		= Historique des activités
+menu.listChangeStateActivities  = Tâches pouvant changer d'état
+menu.historizedActivities		= Historique des tâches
 
 ##### Administration #################################
 admin.addUser.title				= Ajout d'un nouvel utilisateur
