Ajout de la cl? Valider

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -29,7 +29,7 @@ page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
 
 	## Global
 
-form.button.finish		= Terminer
+form.button.finish		= Valider
 form.button.next		= Suivant
 form.button.previous	= Précédent
 
