*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -87,7 +87,12 @@ list.button.manageDependancesTypes.submit		= Valider les types
 
 	## showActivitySummary
 	
-form.title.showActivitySummary	= Fiche de détail d'une tâche
+form.title.showActivitySummary				= Fiche de détail d'une tâche
+form.table.predecessors.title				= Prédécésseurs
+form.table.predecessors.field.predecessor	= Prédécesseur
+form.table.successors.title					= Successeurs
+form.table.successors.field.successor		= Successeur
+form.table.succ_pred.field.linkType			= Type de lien
 
 	## messages
 msg.error 	= Erreur
