*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -140,7 +140,7 @@ menu.listChangeStateActivities  = Tâches pouvant changer d'état
 menu.historizedActivities		= Historique des tâches
 
 ##### Administration #################################
-admin.addUser.title				= Ajout d'un nouvel utilisateur
+admin.addUser.title				= Administration d'un utilisateur
 admin.addUser.firstName			= Nom
 admin.addUser.lastName			= Prénom
 admin.button.validate			= Valider
@@ -150,7 +150,9 @@ admin.field.checkPassword		= Vérification du mot de passeadmin.field.checkPasswo
 admin.field.checkPassword		= Vérification du mot de passe
 
 admin.msg.info.user.validate	= L'utilisateur a bien été enregistré
+admin.msg.info.user.modify		= L'utilisateur a bien été modifié
 admin.msg.error.user.insert		= L'insertion a échoué
+admin.msg.error.user.modify		= La modification a échoué
 
 admin.menu.createUser			= Création utilisateur
 admin.menu.listUsers			= Lister les utilisateurs
