--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -80,19 +80,21 @@ form.button.manageActivityDependances.submit	= Valider les dépendances
 	
 list.title.manageDependancesTypes				= Liste des dépendances et leur type associé
 list.manageDependancesTypes.predecessor 		= Prédecesseur
-list.manageDependancesTypes.successor			= Successeur
+list.manageDependancesTypes.predecessorState	= Etat
 list.manageDependancesTypes.columngroup.title	= Type
 list.button.manageDependancesTypes.submit		= Valider les types
 
 
 	## showActivitySummary
 	
-form.title.showActivitySummary				= Fiche de détail d'une tâche
-form.table.predecessors.title				= Prédécésseurs
-form.table.predecessors.field.predecessor	= Prédécesseur
-form.table.successors.title					= Successeurs
-form.table.successors.field.successor		= Successeur
-form.table.succ_pred.field.linkType			= Type de lien
+form.title.showActivitySummary					= Fiche de détail d'une tâche
+form.table.predecessors.title					= Prédécésseurs
+form.table.predecessors.field.predecessor		= Prédécesseur
+form.table.predecessors.field.predecessorState	= Etat
+form.table.successors.title						= Successeurs
+form.table.successors.field.successorState		= Etat
+form.table.successors.field.successor			= Successeur
+form.table.succ_pred.field.linkType				= Type de lien
 
 	## messages
 msg.error 	= Erreur
