Ajout des tooltips

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -57,15 +57,21 @@ table.field.listActivities.action				= Action
 table.field.listActivities.startDate			= Date de début
 table.field.listActivities.endDate				= Date de fin
 table.field.listActivities.deleteConfirmation 	= Effacer cette tâche ?
-
+table.tooltip.listActivities.drillDown			= Voir la fiche de détail de cette tâche
+table.tooltip.listActivities.edit				= Modifier cette tâche
+table.tooltip.listActivities.delete				= Supprimer cette tâche
 
 
 
 	## manageActivityCreation
 	
-form.title.manageActivityCreation.insert	= Ajouter une tâche
-form.title.manageActivityCreation.update	= Modifier une tâche
-
+form.title.manageActivityCreation.insert			= Ajouter une tâche
+form.title.manageActivityCreation.update			= Modifier une tâche
+form.tooltip.manageActivityCreation.finish.insert	= Ajouter cette tâche et revenir à la liste des tâches
+form.tooltip.manageActivityCreation.finish.update	= Modifier cette tâche et revenir à la liste des tâches
+form.tooltip.manageActivityCreation.next.insert		= Ajouter cette tâche et passer à l'ajout de ses dépendances
+form.tooltip.manageActivityCreation.next.update		= Modifier cette tâche et passer à la modification de ses dépendances
+form.tooltip.manageActivityCreation.previous		= Revenir à la liste des tâches sans sauvegarder
 
 	## manageActivityDependances
 	
@@ -73,7 +79,9 @@ form.title.manageActivityDependances			= Gérer les dépedances d'une tâche
 form.field.manageActivityDependances			= Liste des tâches
 form.field.manageActivityDependances.toAdd 		= Possibles
 form.field.manageActivityDependances.added		= Effectifs
-form.button.manageActivityDependances.submit	= Valider les dépendances
+form.tooltip.manageActivityDependances.finish	= Sauvegarder les dépendances et revenir à la liste des tâches
+form.tooltip.manageActivityDependances.next		= Sauvegarder les dépendances et passer à la gestion des types des dépendances
+form.tooltip.manageActivityDependances.previous	= Revenir à la modification de la tâche sans sauvegarder les dépendances
 
 
 	## manageDependancesTypes
@@ -82,7 +90,8 @@ list.title.manageDependancesTypes				= Liste des dépendances et leur type associ
 list.manageDependancesTypes.predecessor 		= Prédecesseur
 list.manageDependancesTypes.predecessorState	= Etat
 list.manageDependancesTypes.columngroup.title	= Type
-list.button.manageDependancesTypes.submit		= Valider les types
+list.tooltip.manageDependancesTypes.finish		= Sauvegarder les types et revenir à la liste des tâches
+list.tooltip.manageDependancesTypes.previous	= Revenir à la gestion des dépendances sans sauvegarder les types
 
 
 	## showActivitySummary
