--- a/Woops/.classpath
+++ b/Woops/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-collections.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-digester.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/cglib-full-2.0.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jta.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
