*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -156,7 +156,8 @@ admin.addUser.firstName			= Nom
 admin.addUser.lastName			= Prénom
 admin.button.validate			= Valider
 admin.error.password			= Veuillez vérifier votre mot de passe
-admin.field.checkPassword		= Vérification du mot de passeadmin.field.checkPassword		= Vérification du mot de passe
+admin.field.checkPassword		= Contrôle du mot de passe
+admin.addUser.role				= Rôle
 
 admin.field.checkPassword		= Vérification du mot de passe
 
