--- a/Woops/.classpath
+++ b/Woops/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jta.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/junit-3.8.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/strutstest-2.1.3.jar"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
