*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -151,6 +151,7 @@ menu.listChangeStateActivities  = Tâches pouvant changer d'état
 menu.historizedActivities		= Historique des tâches
 
 ##### Administration #################################
+admin.admin.title				= Page d'administration
 admin.addUser.title				= Administration d'un utilisateur
 admin.addUser.firstName			= Nom
 admin.addUser.lastName			= Prénom
@@ -166,9 +167,11 @@ admin.msg.info.user.modify		= L'utilisateur a bien été modifié
 admin.msg.error.user.insert		= L'insertion a échoué
 admin.msg.error.user.modify		= La modification a échoué
 
+admin.menu.home					= Accueil Admin
 admin.menu.createUser			= Création utilisateur
 admin.menu.listUsers			= Lister les utilisateurs
 admin.listUsers.title			= Administration des utilisateurs
+admin.menu.createProject		= Créer un projet
 
 admin.listUsers.title			= Liste des utilisateurs
 table.title.listUsers			= Liste des utilisateurs
