*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -160,6 +160,10 @@ admin.error.password			= Veuillez vérifier votre mot de passe
 admin.field.checkPassword		= Contrôle du mot de passe
 admin.addUser.role				= Rôle
 
+admin.addProject.name			= Nom
+admin.addProject.details		= Détails
+admin.addProject.manageUserParticipation =	Association utilisateurs au projet
+
 admin.field.checkPassword		= Vérification du mot de passe
 
 admin.msg.info.user.validate	= L'utilisateur a bien été enregistré
