*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -175,7 +175,7 @@ admin.menu.home					= Accueil Admin
 admin.menu.createUser			= Création utilisateur
 admin.menu.listUsers			= Lister les utilisateurs
 admin.listUsers.title			= Administration des utilisateurs
-admin.menu.createProject		= Créer un projet
+admin.menu.createProject		= Création projet
 
 admin.listUsers.title			= Liste des utilisateurs
 table.title.listUsers			= Liste des utilisateurs
