--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -176,8 +176,11 @@ admin.menu.createUser			= Création utilisateur
 admin.menu.listUsers			= Lister les utilisateurs
 admin.listUsers.title			= Administration des utilisateurs
 admin.menu.createProject		= Création projet
-
 admin.listUsers.title			= Liste des utilisateurs
+admin.showSummary.title			= Détail d'un utilisateur
+
+admin.summaryUser.showUserSummary =	Détail Utilisateur
+
 table.title.listUsers			= Liste des utilisateurs
 table.field.listUsers.firstName = Nom
 table.field.listUsers.lastName  = Prénom
