--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -189,3 +189,8 @@ table.field.listUsers.role		= Rôle
 table.field.listUsers.edit		= Editer
 table.field.listUsers.delete	= Supprimer
 
+table.title.listBreakDownElements 			= Liste des Projets
+table.field.listBreakDownElements.name 		= Nom
+table.field.listBreakDownElements.details 	= Détails
+table.field.listBreakDownElements.edit 		= Editer
+table.field.listBreakDownElements.delete	= Supprimer
