*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -160,10 +160,12 @@ admin.error.password			= Veuillez vérifier votre mot de passe
 admin.field.checkPassword		= Contrôle du mot de passe
 admin.addUser.role				= Rôle
 
-admin.addProject.name			= Nom
-admin.addProject.details		= Détails
-admin.addProject.manageUserParticipation =	Association utilisateurs au projet
-
+admin.addBreakdownElement.title			= Administration du projet
+admin.addBreakdownElement.name			= Nom
+admin.addBreakdownElement.details		= Détails
+admin.addBreakdownElement.manageUserParticipation =	Association utilisateurs au projet
+admin.addBreakdownElement.manageUserParticipation.toAdd = Utilisateurs non affectes
+admin.addBreakdownElement.manageUserParticipation.added = Utilisateurs affectes
 admin.field.checkPassword		= Vérification du mot de passe
 
 admin.msg.info.user.validate	= L'utilisateur a bien été enregistré
@@ -175,7 +177,7 @@ admin.menu.home					= Accueil Admin
 admin.menu.createUser			= Création utilisateur
 admin.menu.listUsers			= Lister les utilisateurs
 admin.listUsers.title			= Administration des utilisateurs
-admin.menu.createProject		= Création projet
+admin.menu.createBreakdownElement		= Création projet
 admin.listUsers.title			= Liste des utilisateurs
 admin.showSummary.title			= Détail d'un utilisateur
 
