--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -177,7 +177,7 @@ admin.menu.home					= Accueil Admin
 admin.menu.createUser			= Création utilisateur
 admin.menu.listUsers			= Lister les utilisateurs
 admin.listUsers.title			= Administration des utilisateurs
-admin.menu.createBreakdownElement		= Création projet
+admin.menu.createProject		= Création projet
 admin.listUsers.title			= Liste des utilisateurs
 admin.showSummary.title			= Détail d'un utilisateur
 
@@ -192,7 +192,8 @@ table.field.listUsers.edit		= Editer
 table.field.listUsers.delete	= Supprimer
 
 table.title.listBreakDownElements 			= Liste des Projets
-table.field.listBreakDownElements.name 		= Nom
-table.field.listBreakDownElements.details 	= Détails
+table.field.listBreakDownElements.prefix	= Prefixe
+table.field.listBreakDownElements.startDate	= Date de départ
+table.field.listBreakDownElements.endDate	= Date de fin
 table.field.listBreakDownElements.edit 		= Editer
 table.field.listBreakDownElements.delete	= Supprimer
