*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -24,6 +24,7 @@ page.title.manageActivityDependances 	= Gérer une tâche
 page.title.manageDependancesTypes 		= Gérer une tâche
 page.title.showActivitySummary 			= Voir la fiche de détail d'une tâche
 page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
+page.title.listFreeActivities			= Liste des tâches libres
 
 ##### Formulaires  et tables #################################
 
@@ -48,6 +49,7 @@ form.field.password 	= Mot de passe
 	## Activities list
 table.title.listActivities 						= Liste des tâches
 table.title.listChangeStateActivities 			= Liste des tâches pouvant changer d'état
+table.title.listFreeActivities					= Liste des tâches libres
 table.field.listActivities.name 				= Nom
 table.field.listActivities.details 				= Description
 table.field.listActivities.state 				= Etat
@@ -125,6 +127,9 @@ msg.info.activity.dependancesTypes.saved 	= Les types des dépendances de la tâch
 msg.info.activity.manageActivityDependances	= Vous ne pouvez plus changer les dépendances de la tâche "{0}" car elle a déjà été démarrée
 
 
+msg.info.activity.affect 	= La tâche "{0}" vous a bien été affectée
+
+
 ##### Types de dépendnaces #################################
 finishToFinish	= fin à fin
 startToStart	= debut à debut
@@ -139,6 +144,7 @@ finished	= Finie
 ##### Actions d'une activités #################################
 start	= Commencer
 finish	= Terminer
+affect 	= S'affecter
 
 ##### Rôles d'un utilisateur #################################
 userrole.invalid.user 			= Role inconnu
@@ -149,6 +155,7 @@ menu.manageActivityCreation		= Créer une nouvelle tâche
 menu.deconnection 				= Se déconnecter
 menu.listChangeStateActivities  = Tâches pouvant changer d'état
 menu.historizedActivities		= Historique des tâches
+menu.listFreeActivities			= Tâches libres
 
 ##### Administration #################################
 admin.admin.title				= Page d'administration
