*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -173,6 +173,8 @@ admin.addBreakdownElement.details		= Détails
 admin.addBreakdownElement.manageUserParticipation =	Association utilisateurs au projet
 admin.addBreakdownElement.manageUserParticipation.toAdd = Utilisateurs non affectes
 admin.addBreakdownElement.manageUserParticipation.added = Utilisateurs affectes
+admin.addBreakdownElement.kind 			= type de projet
+
 admin.field.checkPassword		= Vérification du mot de passe
 
 admin.msg.info.user.validate	= L'utilisateur a bien été enregistré
