*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -174,6 +174,10 @@ admin.addBreakdownElement.manageUserParticipation 		= Association utilisateurs a
 admin.addBreakdownElement.manageUserParticipation.toAdd = Utilisateurs non affectes
 admin.addBreakdownElement.manageUserParticipation.added = Utilisateurs affectes
 admin.addBreakdownElement.kind 							= type de projet
+admin.msg.info.breakdownelement.validate				= Le projet a bien été enregistré
+admin.msg.info.breakdownelement.modify					= Le projet a bien été modifié
+admin.msg.error.breakdownelement.insert					= L'insertion a échoué
+admin.msg.error.breakdownelement.modify					= La modification a échoué
 
 admin.field.checkPassword		= Vérification du mot de passe
 
