*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -116,6 +116,7 @@ msg.error.activity.change.state.created		= Il n'est pas possible actuellement de
 msg.error.activity.change.state.inprogress	= Il n'est pas possible actuellement de terminer la tâche {0}
 msg.info.activity.change.state.inprogress 	= La tâche "{0}" est à présent en cours de réalisation
 msg.info.activity.change.state.finished 	= La tâche "{0}" a été complètement réalisée
+msg.error.activity.delete					= La tâche "{0}" a été supprimée
 
 msg.info.activity.inserted 	= La tâche "{0}" a bien été ajoutée
 msg.info.activity.updated 	= La tâche "{0}" a bien été modifiée
