*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -34,11 +34,12 @@ form.button.finish		= Valider
 form.button.next		= Suivant
 form.button.previous	= Précédent
 
-form.field.activity.name		= Nom
-form.field.activity.details		= Descritpion
-form.field.activity.state		= Etat
-form.field.activity.startDate	= Date de lancement
-form.field.activity.endDate		= Date de cloture	
+form.field.activity.name					= Nom
+form.field.activity.details					= Descritpion
+form.field.activity.state					= Etat
+form.field.activity.startDate				= Date de lancement
+form.field.activity.endDate					= Date de cloture	
+form.field.activity.checkbox.freeActivity 	= Activité libre ?
 
 	## Login
 button.title.login		= Connexion
@@ -62,6 +63,7 @@ table.field.listActivities.deleteConfirmation 	= Effacer cette tâche ?
 table.tooltip.listActivities.drillDown			= Voir la fiche de détail de cette tâche
 table.tooltip.listActivities.edit				= Modifier cette tâche
 table.tooltip.listActivities.delete				= Supprimer cette tâche
+
 
 
 
@@ -211,3 +213,4 @@ table.field.listBreakDownElements.startDate	= Date de départ
 table.field.listBreakDownElements.endDate	= Date de fin
 table.field.listBreakDownElements.edit 		= Editer
 table.field.listBreakDownElements.delete	= Supprimer
+
