ajout de la génération des graphs

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -25,6 +25,7 @@ page.title.manageDependancesTypes 		= Gérer une tâche
 page.title.showActivitySummary 			= Voir la fiche de détail d'une tâche
 page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
 page.title.listFreeActivities			= Liste des tâches libres
+page.title.showActivityGraph			= Graphe des tâches du projet
 
 ##### Formulaires  et tables #################################
 
