ajout de la génération des graphs

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -160,6 +160,7 @@ menu.deconnection 				= Se déconnecter
 menu.listChangeStateActivities  = Tâches pouvant changer d'état
 menu.historizedActivities		= Historique des tâches
 menu.listFreeActivities			= Tâches libres
+menu.showActivityGraph			= Voir le graphe du projet
 
 ##### Administration #################################
 admin.admin.title				= Page d'administration
