prise en comptes des messages lors de la gestion d'une activité

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -121,8 +121,15 @@ msg.info.activity.change.state.inprogress 	= La tâche "{0}" est à présent en cou
 msg.info.activity.change.state.finished 	= La tâche "{0}" a été complètement réalisée
 msg.error.activity.delete					= La tâche "{0}" a été supprimée
 
-msg.info.activity.inserted 	= La tâche "{0}" a bien été ajoutée
-msg.info.activity.updated 	= La tâche "{0}" a bien été modifiée
+msg.info.activity.inserted 					= La tâche "{0}" a bien été ajoutée
+msg.info.activity.inserted.notFree 			= Votre tâche "{0}" a été ajoutée
+msg.info.activity.inserted.free 			= La tâche libre "{0}" a été ajoutée
+
+msg.info.activity.updated 					= La tâche "{0}" a bien été modifiée
+msg.info.activity.updated.notFree			= Votre tâche "{0}" vous a été modifiée
+msg.info.activity.updated.free				= La tâche libre "{0}" a été modifiée
+msg.info.activity.updated.affectation		= La tâche libre "{0}" a été modifiée. Elle vous a été affectée.
+msg.info.activity.updated.liberation		= La tâche libre "{0}" a été modifiée. Elle a été liberée.
 
 msg.info.activity.dependances.saved 		= Les dépendances de la tâche "{0}" ont bien été sauvegardées
 msg.info.activity.dependancesTypes.saved 	= Les types des dépendances de la tâche "{0}" ont bien été sauvegardées
