ajout de table.tooltip.activity.checkbox.freeActivity

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -77,6 +77,7 @@ form.tooltip.manageActivityCreation.finish.update	= Modifier cette tâche et reve
 form.tooltip.manageActivityCreation.next.insert		= Ajouter cette tâche et passer à l'ajout de ses dépendances
 form.tooltip.manageActivityCreation.next.update		= Modifier cette tâche et passer à la modification de ses dépendances
 form.tooltip.manageActivityCreation.previous		= Revenir à la liste des tâches sans sauvegarder
+table.tooltip.activity.checkbox.freeActivity		= Ne pas cocher cette case revient a s'affecter la tâche
 
 	## manageActivityDependances
 	
