--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -181,8 +181,9 @@ admin.field.checkPassword		= Contrôle du mot de passe
 admin.addUser.role				= Rôle
 
 admin.addBreakdownElement.title							= Administration du projet
+admin.addBreakdownElement.prefix						= Préfixe
 admin.addBreakdownElement.name							= Nom
-admin.addBreakdownElement.details						= Détails
+admin.addBreakdownElement.details						= Description
 admin.addBreakdownElement.manageUserParticipation 		= Association utilisateurs au projet
 admin.addBreakdownElement.manageUserParticipation.toAdd = Utilisateurs non affectes
 admin.addBreakdownElement.manageUserParticipation.added = Utilisateurs affectes
@@ -218,7 +219,8 @@ table.field.listUsers.edit		= Editer
 table.field.listUsers.delete	= Supprimer
 
 table.title.listBreakDownElements 			= Liste des Projets
-table.field.listBreakDownElements.prefix	= Prefixe
+table.field.listBreakDownElements.prefix	= Préfixe
+table.field.listBreakDownElements.name		= Nom
 table.field.listBreakDownElements.startDate	= Date de départ
 table.field.listBreakDownElements.endDate	= Date de fin
 table.field.listBreakDownElements.edit 		= Editer
