--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -8,6 +8,7 @@ errors.persistance.doublon				= L'objet "{0}" existe déjà
 errors.persistance.activity.foreignKey	= Problème de clé étrangère.
 errors.login.invalide					= Votre identification est incorrecte, veuillez réessayer.
 errors.session.invalid					= Vous n'êtes pas encore connecté, veuillez saisir votre login et votre mot de passe 
+errors.admin.deleteCurrentUser			= Vous ne pouvez pas supprimer vous-même.
 
 ##### Controles génériques ###############################
 errors.champ.obligatoire		=Le champ {0} est obligatoire.
@@ -24,8 +25,6 @@ page.title.manageActivityDependances 	= Gérer une tâche
 page.title.manageDependancesTypes 		= Gérer une tâche
 page.title.showActivitySummary 			= Voir la fiche de détail d'une tâche
 page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
-page.title.listFreeActivities			= Liste des tâches libres
-page.title.showActivityGraph			= Graphe des tâches du projet
 
 ##### Formulaires  et tables #################################
 
@@ -64,7 +63,6 @@ table.field.listActivities.deleteConfirmation 	= Effacer cette tâche ?
 table.tooltip.listActivities.drillDown			= Voir la fiche de détail de cette tâche
 table.tooltip.listActivities.edit				= Modifier cette tâche
 table.tooltip.listActivities.delete				= Supprimer cette tâche
-
 
 
 
@@ -172,6 +170,7 @@ menu.showActivityGraph			= Voir le graphe du projet
 
 ##### Administration #################################
 admin.admin.title				= Page d'administration
+admin.admin.deleteConfirmation	= Confirmer l'effacement de l'utilisateur ?
 admin.addUser.title				= Administration d'un utilisateur
 admin.addUser.firstName			= Nom
 admin.addUser.lastName			= Prénom
