*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -218,10 +218,11 @@ table.field.listUsers.edit		= Editer
 table.field.listUsers.delete	= Supprimer
 
 table.title.listBreakDownElements 			= Liste des Projets
-table.field.listBreakDownElements.prefix	= Préfixe
-table.field.listBreakDownElements.name		= Nom
+table.field.listBreakDownElements.prefix	= Nom du Projet
+table.field.listBreakDownElements.prefix	= Prefixe
 table.field.listBreakDownElements.startDate	= Date de départ
 table.field.listBreakDownElements.endDate	= Date de fin
+table.field.listBreakDownElements.kind		= Type
 table.field.listBreakDownElements.edit 		= Editer
 table.field.listBreakDownElements.delete	= Supprimer
 
