Liste projets effective

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -218,7 +218,7 @@ table.field.listUsers.edit		= Editer
 table.field.listUsers.delete	= Supprimer
 
 table.title.listBreakDownElements 			= Liste des Projets
-table.field.listBreakDownElements.prefix	= Nom du Projet
+table.field.listBreakDownElements.name		= Nom du Projet
 table.field.listBreakDownElements.prefix	= Prefixe
 table.field.listBreakDownElements.startDate	= Date de départ
 table.field.listBreakDownElements.endDate	= Date de fin
