*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -217,9 +217,9 @@ table.field.listUsers.role		= Rôle
 table.field.listUsers.edit		= Editer
 table.field.listUsers.delete	= Supprimer
 
-table.title.listBreakDownElements 			= Liste des Projets
-table.field.listBreakDownElements.name		= Nom du Projet
-table.field.listBreakDownElements.prefix	= Prefixe
+table.title.listBreakDownElements 			= Liste des projets
+table.field.listBreakDownElements.name		= Nom du projet
+table.field.listBreakDownElements.prefix	= Préfixe
 table.field.listBreakDownElements.startDate	= Date de départ
 table.field.listBreakDownElements.endDate	= Date de fin
 table.field.listBreakDownElements.kind		= Type
