*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -216,6 +216,7 @@ table.field.listUsers.login		= Login
 table.field.listUsers.role		= Rôle
 table.field.listUsers.edit		= Editer
 table.field.listUsers.delete	= Supprimer
+table.field.listUsers.deleteConfirmation	= Supprimer cet utilisateur ?
 
 table.title.listBreakDownElements 			= Liste des projets
 table.field.listBreakDownElements.name		= Nom du projet
