--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -206,6 +206,8 @@ admin.listUsers.title			= Administration des utilisateurs
 admin.menu.createBreakdownElement		= Création projet
 admin.listUsers.title			= Liste des utilisateurs
 admin.showSummary.title			= Détail d'un utilisateur
+admin.showSummary.bde			= Membres des projets ...
+admin.showSummary.tableBde		= Projets
 
 admin.summaryUser.showUserSummary =	Détail Utilisateur
 
