*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -199,7 +199,7 @@ admin.msg.info.user.modify		= L'utilisateur a bien été modifié
 admin.msg.error.user.insert		= L'insertion a échoué
 admin.msg.error.user.modify		= La modification a échoué
 
-admin.menu.home					= Accueil Admin
+admin.menu.home					= Accueil de l'administration
 admin.menu.createUser			= Création utilisateur
 admin.menu.listUsers			= Lister les utilisateurs
 admin.listUsers.title			= Administration des utilisateurs
